--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>TradGo – Recharge & Bill Payment</title>
-  <meta name="description" content="Your recharge & bill payment app" />
-  <meta name="keywords" content="recharge, bill payment, TradGo" />
+  <title>Mobile Recharge & Bill Payment Dashboard | TradGo</title>
+  <meta name="description"
+    content="TradGo – Fast and secure mobile recharge & bill payment app. Recharge prepaid, pay postpaid, DTH, electricity, gas, and water bills online." />
+  <meta name="keywords"
+    content="Mobile Recharge Online, Online Bill Payment, Prepaid Recharge, Postpaid Bill Payment, DTH Recharge Online, Electricity Bill Payment, Gas Bill Payment, Water Bill Payment, TradGo Recharge App, Secure Online Recharge, Recharge Offers, Cashback on Recharge" />
+
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="TradGo – Recharge & Bill Payment" />
+  <meta property="og:title" content="Mobile Recharge & Bill Payment Dashboard | TradGo" />
   <meta property="og:description" content="Your recharge & bill payment app" />
   <meta property="og:image" content="image/og_image.png" />
   <meta property="og:url" content="https://tradgo.in" />
@@ -26,9 +30,10 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
+
 <body>
   <!-- Snowfall container -->
-  <div class="snow-container"></div>
+  <div className="snow-container"></div>
 
   <!-- React root -->
   <div id="root"></div>
@@ -39,4 +44,5 @@
   <script src="js/main.js"></script>
   <script src="js/snow_fall.js"></script>
 </body>
+
 </html>
