add meta tag and refresh time error solved

--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Mobile Recharge & Bill Payment Dashboard | TradGo</title>
-  <meta name="description"
-    content="TradGo – Fast and secure mobile recharge & bill payment app. Recharge prepaid, pay postpaid, DTH, electricity, gas, and water bills online." />
-  <meta name="keywords"
-    content="Mobile Recharge Online, Online Bill Payment, Prepaid Recharge, Postpaid Bill Payment, DTH Recharge Online, Electricity Bill Payment, Gas Bill Payment, Water Bill Payment, TradGo Recharge App, Secure Online Recharge, Recharge Offers, Cashback on Recharge" />
-
-
-  <!-- Open Graph -->
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Mobile Recharge & Bill Payment Dashboard | TradGo" />
-  <meta property="og:description" content="Your recharge & bill payment app" />
-  <meta property="og:image" content="image/og_image.png" />
-  <meta property="og:url" content="https://tradgo.in" />
-
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg" type="image/x-icon" />
+  <title>TradGo</title>
 
   <!-- CSS -->
 
